force-app/main/default/objects/Academic_Department__c/Academic_Department__c.object-meta.xml
<CustomObject>
    <label>Academic Department</label>
    <nameField>
        <label>Academic Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>