force-app/main/default/objects/Academic_Department__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <description>Unique identifier for the department.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the department.</inlineHelpText>
    <label>Department Code</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>