force-app/main/default/objects/Academic_Department__c/fields/Department_Description__c.field-meta.xml
<CustomField>
    <fullName>Department_Description__c</fullName>
    <description>General information and description of the department’s functions.</description>
    <inlineHelpText>General information and description of the department’s functions.</inlineHelpText>
    <label>Department Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>