force-app/main/default/objects/Academic_Department__c/fields/Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Department_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Department Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>