force-app/main/default/objects/Academic_Department__c/fields/Department_Head__c.field-meta.xml
<CustomField>
    <fullName>Department_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Head</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Staff</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Teacher</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Academic Departments</relationshipLabel>
    <relationshipName>Academic_Departments</relationshipName>
    <type>Lookup</type>
</CustomField>