force-app/main/default/objects/Academic_Department__c/fields/Department_Location__c.field-meta.xml
<CustomField>
    <fullName>Department_Location__c</fullName>
    <description>Physical location of the department within the institution.</description>
    <inlineHelpText>Physical location of the department within the institution.</inlineHelpText>
    <label>Department Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>